--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大腸がんクイック診断</title>
+    <title>Web Components Lit Sample Page.</title>
 </head>
 <body>
+    <!-- app render -->
     <div id="app"></div>
-
     <script src="./js/main.js" type="module"></script>
 </body>
 </html>
